Make `CommandAPI#unregister` remove commands from `CommandAPIHandler.registeredCommands`
Also made unregistering on Velocity respect the `unregisterNamespaces` parameter and update the dispatcher file